--- a/design/templates/OpenGame/admin/settings.tpl.html
+++ b/design/templates/OpenGame/admin/settings.tpl.html
@@ -4,7 +4,7 @@
 <!-- ENDIF -->
 
 <form action="" method="post">
-  <table style="color:#FFFFFF;" class="table"><tbody>
+  <table style="color:#FFFFFF;"><tbody>
     <tr><th class="c_l" colspan="2">{L_adm_opt_ver_check}</th></tr>
     <tr>
       <td class="c_c" colspan="2">
