--- a/design/templates/OpenGame/banned_body.tpl.html
+++ b/design/templates/OpenGame/banned_body.tpl.html
@@ -9,11 +9,11 @@
   </tr>
   <!-- BEGIN banlist -->
     <tr align=center>
-      <td class=cell_left><b>{banlist.USER_NAME}</b></td>
-      <td class=cell_left><b>{banlist.REASON}</b></td>
+      <td class="c_l"><b>{banlist.USER_NAME}</b></td>
+      <td class="c_l"><b>{banlist.REASON}</b></td>
       <td class=b><b>{banlist.FROM}</b></td>
       <td class=b><b>{banlist.UNTIL}</b></td>
-      <td class=cell_left><b>{banlist.ISSUER_NAME}</b></td>
+      <td class="c_l"><b>{banlist.ISSUER_NAME}</b></td>
     </tr>
   <!-- END banlist -->
   <tr><td class="c" colspan="5">{L_ban_banned}{BANNED_COUNT}</td></tr>
