--- a/design/templates/OpenGame/simple_table.tpl.html
+++ b/design/templates/OpenGame/simple_table.tpl.html
@@ -12,8 +12,8 @@
 
     <!-- BEGIN row -->
       <tr align=center>
-        <td class=cell_left><b>{row.VALUE_1}</b></td>
-        <td class=cell_left><b>{row.VALUE_2}</b></td>
+        <td class="c_l"><b>{row.VALUE_1}</b></td>
+        <td class="c_l"><b>{row.VALUE_2}</b></td>
       </tr>
     <!-- END row -->
     <!-- IF table.TABLE_FOOTER && .row -->
