--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -22,7 +22,7 @@
       <table cellspacing="0" cellpadding="0" class="header c_c markup" width="100%">
         <tr>
           <th class="c_l noborder">
-            <select size="1" onchange="changePlanet(this);">
+            <select size="1" onchange="changePlanet(this);" id="navbar_planet_select">
               <!-- BEGIN topnav_planets -->
                 <option{topnav_planets.SELECTED} value="{topnav_planets.ID}">{topnav_planets.NAME}&nbsp;{topnav_planets.COORDS}
               <!-- END topnav_planets -->
