--- a/design/templates/OpenGame/universe_old.tpl.html
+++ b/design/templates/OpenGame/universe_old.tpl.html
@@ -271,5 +271,5 @@
     <span id="flt_spies">{SPs}</span> {L_gf_sp_title}
   </td>
 </tr>
-<tr style="display: none;" id="fleetstatusrow"><th class=c colspan="{COL_SPAN}"><table width="100%" id="fleetstatustable"></table></th></tr>
+<tr style="display: none;" id="fleetstatusrow"><th class=c colspan="{COL_SPAN}"><table width="100%" id="fleetstatustable" class="no_border_image"></table></th></tr>
 </tbody></table>
