--- a/design/templates/OpenGame/planet_list.tpl.html
+++ b/design/templates/OpenGame/planet_list.tpl.html
@@ -60,9 +60,7 @@
           </span>
           <!-- ENDIF -->
 
-          <span title="{L_flt_gather_all}" class="a75 icon-gather-wrapper" go="fleet" mode="5">
-            <div class="icons icon-gather"></div>
-          </span>
+          <span title="{L_flt_gather_all}" class="a75 icon-gather-wrapper icon_gather" go="fleet" mode="5"></span>
 
           <!-- IF planet.FLEET_OWN -->
           <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_fleet_own.png" class="a75 icon_25per_top_2" go="flying" onmouseover="fleet_dialog_show(this, '{planet.PLANET_FLEET_ID}')" />
